syntax = "proto3";

option csharp_namespace = "Common.Protos.ServerConfiguration";

service ServerConfigurationService {
    rpc JoinPartition(JoinPartitionRequest) returns (JoinPartitionResponse);
    rpc Status(StatusRequest) returns (StatusResponse);
    rpc Crash(CrashRequest) returns (CrashResponse);
    rpc Freeze(FreezeRequest) returns (FreezeResponse);
    rpc Unfreeze(UnfreezeRequest) returns (UnfreezeResponse);
}

message JoinPartitionRequest {
    string partition_id = 1;
    repeated Server servers = 2;
    string masterId = 3;
}

message JoinPartitionResponse {}

message Server {
    string id = 1;
    string url = 2;
}

message StatusRequest {}

message StatusResponse {}

message CrashRequest {}

message CrashResponse {}

message FreezeRequest {}

message FreezeResponse {}

message UnfreezeRequest {}

message UnfreezeResponse {}
